--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ROKA CARDS</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>TOP 10 GAMES</h1>
+      <div class="card-container" id="gameCards">
+        <div class="card"></div>
+        <div class="gameDescription"></div>
+      </div>
+    </main>
+  </body>
 </html>
